--- a/.github/workflows/add-prs-to-project.yml
+++ b/.github/workflows/add-prs-to-project.yml
@@ -46,6 +46,7 @@ jobs:
           ISSUE_PROJECT_NUMBER: 39
           ISSUE_PROJECT_QUERY: |
             org:mdn is:pr team-review-requested:mdn/core-yari-content ${{ env.COMMON_FILTER }}
+            org:mdn is:pr team-review-requested:mdn/content-team ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:bsmth ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:dipikabh ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:pepelsbey ${{ env.COMMON_FILTER }}
@@ -63,9 +64,9 @@ jobs:
           ISSUE_PROJECT_NUMBER: 40
           ISSUE_PROJECT_QUERY: |
             org:mdn is:pr team-review-requested:mdn/core-dev ${{ env.COMMON_FILTER }}
+            org:mdn is:pr team-review-requested:mdn/engineering ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:argl ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:caugner ${{ env.COMMON_FILTER }}
-            org:mdn is:pr user-review-requested:fiji-flo ${{ env.COMMON_FILTER }}
             org:mdn is:pr user-review-requested:LeoMcA ${{ env.COMMON_FILTER }}
             is:pr review:none -author:app/dependabot ${{ env.COMMON_FILTER }} ${{ env.ENGINEERING_REPO_FILTER }}
 
