--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
   "scripts": {
     "add-labels": "node src/add-labels.js",
     "add-to-project": "node src/add-to-project.js",
-    "manage-project-items": "node src/manage-project-items.js",
-    "prepare": "husky || true"
+    "manage-project-items": "node src/manage-project-items.js"
   },
   "devDependencies": {
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.7",
+    "lefthook": "^1.10.3",
     "prettier": "^3.7.3"
   },
   "engines": {
