--- a/.lefthook.yml
+++ b/.lefthook.yml
@@ -5,6 +5,11 @@ pre-commit:
       run: npx prettier --write --cache --ignore-unknown {staged_files}
       stage_fixed: true
 
+post-merge:
+  commands:
+    npm-install:
+      run: npm install
+
 output:
   - summary
   - failure
