--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prettier": "^3.7.4"
   },
   "engines": {
-    "node": ">=22"
-  }
+    "node": ">=24"
+  },
+  "packageManager": "npm@11.6.2"
 }
