--- a/.github/workflows/add-issues-to-project.yml
+++ b/.github/workflows/add-issues-to-project.yml
@@ -100,6 +100,16 @@ jobs:
             org:mdn is:issue label:"involves: Engineering" ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_REPOS }}
             is:issue ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_LABELS }} ${{ env.ENGINEERING_REPO_FILTER }}
 
+      - name: Contributor issues
+        run: |
+          npm run add-to-project
+          npm run manage-project-items
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          ISSUE_PROJECT_OWNER: mdn
+          ISSUE_PROJECT_NUMBER: 25
+          ISSUE_PROJECT_QUERY: org:mdn is:issue (label:"help wanted" OR label:"good first issue" OR label:"accepting pr" OR label:"accepting prs" OR label:"PR welcome") ${{ env.COMMON_FILTER }} ${{ env.EXCLUDE_REPOS }}
+
       - name: Ping
         env:
           ping_url: ${{ secrets.PING_URL_ISSUES }}
