--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,28 +1,29 @@
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: npm
+    directory: /
     schedule:
-      interval: "weekly"
+      interval: weekly
     open-pull-requests-limit: 10
     groups:
-      prod:
+      npm-prod:
         dependency-type: production
         update-types:
           - minor
           - patch
-      dev:
+      npm-dev:
         dependency-type: development
         update-types:
           - minor
           - patch
     commit-message:
-      prefix: "chore(deps): "
-      prefix-development: "chore(deps-dev): "
+      prefix: chore
+      include: scope
 
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
       interval: weekly
     commit-message:
-      prefix: "ci(deps): "
+      prefix: ci
+      include: scope
