--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "add-labels": "node src/add-labels.js",
     "add-to-project": "node src/add-to-project.js",
-    "manage-project-items": "node src/manage-project-items.js"
+    "manage-project-items": "node src/manage-project-items.js",
+    "test": "node --test"
   },
   "devDependencies": {
     "lefthook": "^2.0.14",
