--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -26,4 +26,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.AUTOMERGE_TOKEN }}
         run: |
           gh pr review ${{ github.event.pull_request.html_url }} --approve 
-          gh pr comment ${{ github.event.pull_request.html_url }} --body "@dependabot squash and merge"
+          gh pr merge ${{ github.event.pull_request.html_url }} --auto --squash
