--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
       - main
   pull_request:
 
-# No GITHUB_TOKEN permissions, as we don't use it.
+    # No GITHUB_TOKEN permissions, as we don't use it.
 permissions: {}
 
 jobs:
@@ -24,6 +24,7 @@ jobs:
         with:
           cache: npm
           node-version-file: ".nvmrc"
+          check-latest: true
 
       - name: Install
         run: npm ci
